--- a/frontend/src/app/pages/main/main.page.html
+++ b/frontend/src/app/pages/main/main.page.html
@@ -27,7 +27,7 @@
             transform="scale(2)"
           />
         </svg>
-        <span>{{'dashboard.github-repository' | translate}}</span>
+        <span>{{'main.github-repository' | translate}}</span>
         <mat-icon>open_in_new</mat-icon>
       </a>
     </mat-sidenav>
