--- a/frontend/src/app/pages/setup/setup.page.html
+++ b/frontend/src/app/pages/setup/setup.page.html
@@ -1,2 +1,2 @@
-<finwa-backend-config *ngIf="!(backendConfigured$ | async)"></finwa-backend-config>
+<finwa-backend-config *ngIf="(backendConfigured$ | async) === false"></finwa-backend-config>
 <finwa-login *ngIf="backendConfigured$ | async"></finwa-login>
