--- a/frontend/src/app/components/login/login.component.scss
+++ b/frontend/src/app/components/login/login.component.scss
@@ -8,8 +8,8 @@
 form {
   display: flex;
   flex-direction: column;
-  min-width: 33%;
   margin: 2rem;
+  min-width: calc(min(33%, 16rem));
 }
 
 .back-button {
@@ -25,7 +25,7 @@ form {
 
 .progress-bar {
   position: fixed;
-  bottom: 1rem;
+  top: 1rem;
   left: 1rem;
   right: 1rem;
   width: calc(100% - 2rem);
