--- a/frontend/src/app/components/backend-config/backend-config.component.html
+++ b/frontend/src/app/components/backend-config/backend-config.component.html
@@ -4,17 +4,13 @@
       <mat-label>{{ "setup.protocol" | translate }}</mat-label>
       <mat-select [formControlName]="'protocol'">
         <mat-option [value]="'https'">https</mat-option>
-        <mat-option
-          [value]="'http'"
-          [matTooltip]="'setup.http-tooltip' | translate"
-          matTooltipPosition="left"
-          matTooltipShowDelay="250"
-          matTooltipHideDelay="250"
-        > http </mat-option>
+        <mat-option [value]="'http'" [matTooltip]="'setup.http-tooltip' | translate" matTooltipPosition="left" matTooltipShowDelay="250" matTooltipHideDelay="250">
+          http
+        </mat-option>
       </mat-select>
     </mat-form-field>
     <span class="separator">://</span>
-    <mat-form-field [formGroup]="formGroup"  class="address-input">
+    <mat-form-field [formGroup]="formGroup" class="address-input">
       <mat-label>{{ "setup.address" | translate }}</mat-label>
       <input matInput [formControlName]="'address'" placeholder="your.domain.org" autocomplete="off" />
     </mat-form-field>
