--- a/frontend/src/app/pages/user-management/user-management.page.html
+++ b/frontend/src/app/pages/user-management/user-management.page.html
@@ -1,1 +1,4 @@
 <button mat-raised-button (click)="refreshUsers()">Refresh Users</button>
+<button mat-fab color="primary" (click)="openCreateUserDialog()" class="create-user-button">
+  <mat-icon>add</mat-icon>
+</button>
