--- a/frontend/src/app/components/backend-config/backend-config.component.html
+++ b/frontend/src/app/components/backend-config/backend-config.component.html
@@ -4,7 +4,7 @@
       <mat-label>{{ "setup.protocol" | translate }}</mat-label>
       <mat-select [formControlName]="'protocol'">
         <mat-option [value]="'https'">https</mat-option>
-        <mat-option [value]="'http'" [matTooltip]="'setup.http-tooltip' | translate" matTooltipPosition="left" matTooltipShowDelay="250" matTooltipHideDelay="250">
+        <mat-option [matTooltip]="'setup.http-tooltip' | translate" [value]="'http'" matTooltipHideDelay="250" matTooltipPosition="left" matTooltipShowDelay="250">
           http
         </mat-option>
       </mat-select>
@@ -12,17 +12,17 @@
     <span class="separator">://</span>
     <mat-form-field [formGroup]="formGroup" class="address-input">
       <mat-label>{{ "setup.address" | translate }}</mat-label>
-      <input matInput [formControlName]="'address'" placeholder="your.domain.org" autocomplete="off" />
+      <input [formControlName]="'address'" autocomplete="off" matInput placeholder="your.domain.org" />
     </mat-form-field>
   </div>
   <div class="button-container">
-    <button mat-raised-button (click)="testBackendConfiguration()" color="primary" [disabled]="formGroup.invalid">{{ "setup.next" | translate }}</button>
+    <button (click)="testBackendConfiguration()" [disabled]="formGroup.invalid" color="primary" mat-raised-button>{{ "setup.next" | translate }}</button>
   </div>
 </form>
 <finwa-http-progress-bar
-  class="progress-bar"
-  [requests]="requests$"
-  [displayErrors]="false"
-  (responseReceived)="onResponseReceived($event)"
   (errorOccurred)="onErrorOccurred()"
+  (responseReceived)="onResponseReceived($event)"
+  [displayErrors]="false"
+  [requests]="requests$"
+  class="progress-bar"
 ></finwa-http-progress-bar>
