--- a/frontend/src/app/pages/user-management/user-management.page.html
+++ b/frontend/src/app/pages/user-management/user-management.page.html
@@ -1,4 +1,4 @@
-<button mat-raised-button (click)="refreshUsers()">Refresh Users</button>
-<button mat-fab color="primary" (click)="openCreateUserDialog()" class="create-user-button">
+<button (click)="refreshUsers()" mat-raised-button>Refresh Users</button>
+<button (click)="openCreateUserDialog()" class="create-user-button" color="primary" mat-fab>
   <mat-icon>add</mat-icon>
 </button>
