Frontend: Add UserTableComponent

--- a/frontend/src/app/pages/user-management/user-management.page.html
+++ b/frontend/src/app/pages/user-management/user-management.page.html
@@ -1,4 +1,5 @@
 <button (click)="refreshUsers()" mat-raised-button>Refresh Users</button>
+<finwa-user-table></finwa-user-table>
 <button (click)="openCreateUserDialog()" class="create-user-button" color="primary" mat-fab>
   <mat-icon>add</mat-icon>
 </button>
