feature(frontend): implement updating of users
Implement updating of users via dialog. Also updated visuals of UserManagementPage.

--- a/frontend/src/app/pages/user-management/user-management.page.html
+++ b/frontend/src/app/pages/user-management/user-management.page.html
@@ -1,5 +1,10 @@
-<button (click)="refreshUsers()" mat-raised-button>Refresh Users</button>
 <finwa-user-table></finwa-user-table>
-<button (click)="openCreateUserDialog()" class="create-user-button" color="primary" mat-fab>
-  <mat-icon>add</mat-icon>
-</button>
+<div class="fab-container">
+  <button (click)="refreshUsers()" color="primary" mat-fab>
+    <mat-icon>refresh</mat-icon>
+  </button>
+  <button (click)="openCreateUserDialog()" color="primary" mat-fab>
+    <mat-icon>add</mat-icon>
+  </button>
+</div>
+
