--- a/frontend/src/app/components/user-table/user-table.component.html
+++ b/frontend/src/app/components/user-table/user-table.component.html
@@ -1,4 +1,4 @@
-<table mat-table [dataSource]="dataSource" matSort class="mat-elevation-z4">
+<table mat-table [dataSource]="dataSource" matSort>
   <!-- Name Column -->
   <ng-container matColumnDef="name">
     <th mat-header-cell *matHeaderCellDef mat-sort-header>{{ "user.name" | translate }}</th>
@@ -9,7 +9,10 @@
   <ng-container matColumnDef="actions">
     <th mat-header-cell *matHeaderCellDef>{{ "actions.title" | translate }}</th>
     <td mat-cell *matCellDef="let user">
-      <button mat-icon-button (click)="deleteUserById(user.id)" color="warn" class="action-button" matTooltip="{{ 'actions.delete' | translate }}">
+      <button mat-icon-button (click)="editUser(user)" color="primary" matTooltip="{{ 'actions.edit' | translate }}">
+        <mat-icon>edit</mat-icon>
+      </button>
+      <button mat-icon-button (click)="deleteUserById(user.id)" color="warn" matTooltip="{{ 'actions.delete' | translate }}">
         <mat-icon>delete</mat-icon>
       </button>
     </td>
