--- a/frontend/src/app/pages/user-management/user-management.page.scss
+++ b/frontend/src/app/pages/user-management/user-management.page.scss
@@ -1,5 +1,11 @@
-.create-user-button {
+.fab-container {
   position: absolute;
   right: 1rem;
   bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+
+  button:first-child {
+    margin-bottom: 1rem;
+  }
 }
