refactor(frontend): split JwtInterceptor
Split JwtInterceptor into AuthInterceptor and ErrorInterceptor to improve code quality.

--- a/frontend/src/app/components/backend-config/backend-config.component.html
+++ b/frontend/src/app/components/backend-config/backend-config.component.html
@@ -19,9 +19,4 @@
     <button (click)="testBackendConfiguration()" [disabled]="formGroup.invalid" color="primary" mat-raised-button>{{ "setup.next" | translate }}</button>
   </div>
 </form>
-<finwa-http-progress-bar
-  (errorOccurred)="onErrorOccurred()"
-  (responseReceived)="onResponseReceived($event)"
-  [requests]="requests$"
-  class="progress-bar"
-></finwa-http-progress-bar>
+<finwa-http-progress-bar (errorOccurred)="onErrorOccurred()" (responseReceived)="onResponseReceived($event)" [requests]="requests$" class="progress-bar"></finwa-http-progress-bar>
